messages improved